--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy-prod": "gatsby build && mv ./public/* /var/www/html/"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
