--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-prod": "gatsby build && mv ./public/* /var/www/html/"
+    "deploy-prod": "gatsby build && mv ./public/* /var/www/bendoylegray.com/"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
