--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-prod": "gatsby build && rm -rf /var/www/bendoylegray.com/* && mv ./public/* /var/www/bendoylegray.com/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
