--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm rebuild node-sass
 
       - uses: actions/checkout@v2
-        run: npm ci && npm run build
+      - run: npm ci && npm run build
 
       - name: Deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
