--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: '15.5.0'
 
       - name: Checkout stuff
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@3.12.0
