--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,11 +19,14 @@ jobs:
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@3.12.0
 
+      - name: Clean install
+        run: npm ci
+
       - name: Try to fix node-sass
         run: npm uninstall node-sass -g && node cache clean && node install node-sass
 
-      - name: Clean install and build
-        run: npm ci && npm run build
+      - name: Build
+        run: npm run build
 
       - name: Deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
