--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,11 +16,8 @@ jobs:
       - name: Checkout stuff
         uses: actions/checkout@v2
 
-      - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@3.12.0
-
-      - name: Install
-        run: npm i
+      - name: Clean install
+        run: npm ci
 
       - name: Build
         run: npm run build
