--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: '15.5.0'
 
       - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@3.12.0 && npm i -g gatsby-cli@2.12.100-telemetry-test.518+061bd7f1b1
+        run: npm install -g gatsby-cli@4.17.1
 
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
