--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: '15.14.0'
 
+      - name: Install Firebase tools
+        run: npm install -g firebase-tools
+
       - name: Install Gatsby CLI
         run: npm install -g gatsby-cli@3.12.0
 
