--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,10 +19,10 @@ jobs:
         run: npm install -g firebase-tools@9
 
       - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@3.12.0
+        run: npm install -g gatsby-cli@2.19.3
 
       - name: NPM Install
-        run: npm ci
+        run: npm i
 
       - name: NPM Build
         run: npm run build
