--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Python2
-        run: apt install python2
+        run: sudo apt install python2
 
       - name: Install Node.js
         uses: actions/setup-node@v1
