--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install Python2
+        run: sudo apt install python2
+
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
@@ -21,10 +24,10 @@ jobs:
         run: npm install -g firebase-tools@9
 
       - name: Install Gatsby CLI
-        run: npm install -g gatsby-cli@3.12.0
+        run: npm install -g gatsby-cli@2.19.3
 
       - name: NPM Install
-        run: npm ci
+        run: npm i
 
       - name: NPM Build
         run: npm run build
