--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -34,5 +34,5 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BENDOYLEGRAY_2F80A }}'
-          projectId: bendoylegray-2f80a
+          firebaseServiceAccount: '${{ secrets.SERVICE_ACCOUNT }}'
+          projectId: '${{ secrets.PROJECT_ID }}'
